
- Opcache:
  . Fixed #78202 (Opcache stats for cache hits are capped at 32bit NUM). (cmb)

- mysqlnd:
  . Fixed #60594 (mysqlnd exposes 160 lines of stats in phpinfo). (PeeHaa)

- PDO:
  . Implemented FR #78033 (PDO - support username & password specified in
    DSN). (sjon)

- PDO_Sqlite:
  . Fixed #78192 (SegFault when reuse statement after schema has changed).
    (Vincent Quatrevieux)

- Standard:
  . Implemented FR #78177 (Make proc_open accept command array). (Nikita)
  . Fixed #78208 (password_needs_rehash() with an unknown algo should always
    return true). (Sara)
  . Fixed #78241 (touch() does not handle dates after 2038 in PHP 64-bit). (cmb)
  . Implemented RFC where password_hash() has argon2i(d) implementations from
    ext/sodium when PHP is built without libargon:
    https://wiki.php.net/rfc/sodium.argon.hash (Sara)

27 Jun 2019, PHP 7.4.0alpha2

- Core:
  . Fixed bug #78151 (Segfault caused by indirect expressions in PHP 7.4a1).
    (Nikita)
  . Fixed bug #78154 (SEND_VAR_NO_REF does not always send reference). (Nikita)
  . Fixed bug #78182 (Segmentation fault during by-reference property
    assignment). (Nikita)

- Date:
  . Fixed #69044 (discrepency between time and microtime). (krakjoe)

- GD:
  . Added TGA read support. (cmb)

- MySQLi:
  . Fixed bug #67348 (Reading $dbc->stat modifies $dbc->affected_rows).
    (Derick)

- Opcache:
  . Fixed bug #78106 (Path resolution fails if opcache disabled during request).
    (Nikita)
  . Fixed bug #78175 (Preloading segfaults at preload time and at runtime).
    (Dmitry)

- SQLite3:
  . Implement FR ##70950 (Make SQLite3 Online Backup API available). (BohwaZ)

13 Jun 2019, PHP 7.4.0alpha1

- Core:
  . Fixed bug #77345 (Stack Overflow caused by circular reference in garbage
    collection). (Alexandru Patranescu, Nikita, Dmitry)
  . Fixed bug #77877 (call_user_func() passes $this to static methods).
    (Dmitry)
  . Implemented FR #76148 (Add array_key_exists() to the list of specially